<resources>
    <string name="app_name">Picker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_item">Add new item</string>
    <string name="pick">Pick</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="db_is_empty">Database is empty!</string>
    <string name="title_empty">Title is empty</string>
    <string name="saved">Saved!</string>
</resources>