...

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@null"
                android:focusableInTouchMode="true"
                android:gravity="center"
...
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/main_background_color"
                app:layout_constraintTop_toBottomOf="@+id/ti_title" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ti_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@null"
                android:hint="@string/description"
...
